Update SignalingAddress to normalize all JIDs.

Previously JIDs were not normalized consistently which results in
failure to connect when host has mixed-case JID. This CL fixes it by
making SignalingAddress always normalize all JIDs. Also it's now a class
instead of struct, to ensure that the content is always consistent.

BUG=675014

Review-Url: https://codereview.chromium.org/2577333003
Cr-Commit-Position: refs/heads/master@{#439623}

Former-commit-id: 428e8936ff8346722f3268db7b7d8df7117f5ad9